--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -109,7 +109,22 @@
 \newcommand{\Sec}[1]{Sec.~\ref{#1}}
 \newcommand{\indep}{\mathrel{\perp\mspace{-10mu}\perp}}
 \newcommand{\RN}[1]{ \textup{\uppercase\expandafter{\romannumeral#1}}} %This is for inserting Roman Numbers (useful for \stackrel in equations so that you don't confuse indicating numbers from equation numbers
+\newcommand{\e}{\ensuremath{\vec{e}}}
+\newcommand{\ert}{\ensuremath{\vec{e}(\vec{r},t)}}
+\renewcommand{\b}{\ensuremath{\vec{b}}}
+\newcommand{\brt}{\vec{b}(\vec{r},t)}
+\newcommand{\h}{\ensuremath{\vec{h}}}
+\newcommand{\hrt}{\ensuremath{\vec{h}(\vec{r},t)}}
+\renewcommand{\d}{\ensuremath{\vec{d}}}
+\newcommand{\drt}{\ensuremath{\vec{d}(\vec{r},t)}}
+\newcommand{\Jt}{\ensuremath{\vec{J}_T}}
+\renewcommand{\r}{\ensuremath{\vec{r}}}
+\newcommand{\rot}{\ensuremath{\nabla\times}}
+\newcommand{\diverg}{\ensuremath{\nabla\cdot}}
 
+%Derivatives shortcut
+\newcommand{\deriv}[3][]{% \deriv[<order>]{<func>}{<var>}
+  \ensuremath{\frac{\partial^{#1} {#2}}{\partial {#3}^{#1}}}}
 %---------------------------------
 
 \begin{document}
