Fixed bad format

--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -20,7 +20,7 @@ Elenchiamo ora gli operatori che utilizzeremo, per poi definirli meglio in delle
   \item[Gradiente] $\nabla$
   \item[Laplaciano] $\nabla^2$
 \end{description}
-Iniziamo a descrivere cosa succede a un generico vettore $\vec{A\left(\r\right)}=\left(A_x(\r),A_y(\r),A_z(\r)\right)$.
+Iniziamo a descrivere cosa succede a un generico vettore $\vec{A}\left(\r\right)=\left(A_x(\r),A_y(\r),A_z(\r)\right)$.
 \subsection{Rotore}
 \begin{equation} \begin{split}
   \rot \vec{A(\r)} &=
